# KinectTouch

./: .cproject  .gitignore  .project  CMakeLists.txt  README  README.md  niConfig.xml
Debug/: makefile  objects.mk  sources.mk
Debug/src/: subdir.mk
Debug/src/TUIO/: subdir.mk
Debug/src/oscpack/ip/: subdir.mk
Debug/src/oscpack/ip/posix/: subdir.mk
Debug/src/oscpack/osc/: subdir.mk
src/: KinectTouch.cpp
src/TUIO/: TuioCursor.h  TuioServer.h
src/TUIO/.svn/: all-wcprops  entries
src/TUIO/.svn/text-base/: TuioClient.cpp.svn-base  TuioClient.h.svn-base  TuioContainer.h.svn-base  TuioObject.h.svn-base  TuioPoint.h.svn-base  TuioServer.cpp.svn-base
src/oscpack/.svn/: all-wcprops  entries
src/oscpack/ip/.svn/: all-wcprops  entries
src/oscpack/ip/posix/.svn/: all-wcprops  entries
src/oscpack/osc/.svn/: all-wcprops  entries
src/oscpack/osc/.svn/text-base/: OscHostEndianness.h.svn-base
